--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,10 @@
               "browserTarget": "challenge-it4w:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -94,5 +97,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a1c9d26b-e46a-4480-90b7-9bd0c979fe74"
   }
 }
